style tweaks to fix content visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   html {
     -webkit-tap-highlight-color: transparent;
   }
+
+  html, body {
+    height: 100%;
+  }
 }
 
 @layer components {
